CDP-1620 FDA: SonarQube metric improvements - Sprint 5: remove initialization of ExecutorService through PostConstruct in AbstractUsageChainExecutor